# gatecheck

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.md  REFERENCES.md  install.sh
.github/workflows/: ci.yml
examples/: gatecheck.example.toml  pre-commit-hook
src/: lib.rs  main.rs
tests/: integration.rs
