[package]
name = "gatecheck"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Ultra-fast pre-commit secret + license scanner with sub-50ms cold start. Library + CLI."
license = "MIT"
repository = "https://github.com/M00C1FER/gatecheck"
keywords = ["pre-commit", "secret-scanning", "security", "git-hook"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "gatecheck"
path = "src/lib.rs"

[[bin]]
name = "gatecheck"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
